--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Create Your Superhero Team!</title>
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
+    <form method="POST" action="/teams">
+      <label for="team_name">Team Name:</label>
+      <input type="text" id="team_name"name="team[name]">
+      <p><label for="team_motto">Team Motto:</label>
+      <input type="text" id="team_motto" name="team[motto]"></p>
 
+    <h1>Hero 1</h1>
+      <label for="member1_name">Hero's Name:</label>
+      <input type="text" id="member1_name"name="team[members][][name]">
+      <p><label for="member1_power">Hero's Power:</label>
+      <input type="text" id="member1_power"name="team[members][][power]"></p>
+      <p><label for="member1_bio">Hero's Biography:</label>
+      <input type="text" id="member1_bio" name="team[members][][bio]"></p>
+
+    <h1>Hero 2</h1><br>
+      <label for="member2_name">Hero's Name:</label>
+      <input type="text" id="member2_name"name="team[members][][name]">
+      <p><label for="member2_power">Hero's Power:</label>
+      <input type="text" id="member2_power"name="team[members][][power]"></p>
+      <p><label for="member2_bio">Hero's Biography:</label>
+      <input type="text" id="member2_bio" name="team[members][][bio]"></p>
+
+    <h1>Hero 3</h1><br>
+      <label for="member3_name">Hero's Name:</label>
+      <input type="text" id="member3_name"name="team[members][][name]">
+      <p><label for="member3_power">Hero's Power:</label>
+      <input type="text" id="member3_power"name="team[members][][power]"></p>
+      <p><label for="member3_bio">Hero's Biography:</label>
+      <input type="text" id="member3_bio" name="team[members][][bio]"></p>
+      <p><input type="submit" value="submit"></p>
+    </form>
+  </body>
+</html>
